--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ rand = "0.7.3"
 
 quickcheck = "^0.9.2"
 easybench = "1.0.0"
+
 cardpack = "0.3.8"
+simple-cards = "1.1.0"
 
 [[bench]]
 name = "bench"
