--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.1"
 authors = ["David Roundy <daveroundy@gmail.com>"]
 edition = "2018"
 
+keywords = ["card", "deck"]
+
 description = "Yet another library for playing cards and sets of cards"
 repository = "https://github.com/droundy/bridge-cards"
 readme = "README.md"
