--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ license = "MIT/Apache-2.0"
 
 rand = "0.7.3"
 
+display-as = { version = "0.5.2", optional = true }
+
 [dev-dependencies]
 
 quickcheck = "^0.9.2"
