enable passing in an RNG which makes things faster, and enables experimenting with different generators

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,14 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 
-rand = "0.7.3"
+rand = { version = "0.8", features = ["small_rng"] }
 
 display-as = { version = "0.5.2", optional = true }
 
 [dev-dependencies]
 
 quickcheck = "^0.9.2"
-easybench = "1.0.0"
+easybench = "1.1.0"
 
 cardpack = "0.3.8"
 simple-cards = "1.1.0"
