--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ license = "MIT/Apache-2.0"
 [dependencies]
 
 rand = { version = "0.8", features = ["small_rng"] }
+serde = { version = "1.0", features = ["derive"] }
 
 display-as = { version = "0.5.2", optional = true }
 
