--- a/abridge/Cargo.toml
+++ b/abridge/Cargo.toml
@@ -13,6 +13,7 @@ bridge-deck = { version = "0.1.1", path = "..", features = ["display-as"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8.0"
+memorable-wordlist = "0.1.7"
 
 warp = "0.2.5"
 tokio = { version = "0.2", features = ["full"] }
