--- a/abridge/Cargo.toml
+++ b/abridge/Cargo.toml
@@ -18,5 +18,6 @@ memorable-wordlist = "0.1.7"
 warp = "0.2.5"
 tokio = { version = "0.2", features = ["full", "time"] }
 futures = "0.3.8"
+regex = "1.4.3"
 
 display-as = { version = "0.5.2", features = ["usewarp"] }
