--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ license = "MIT/Apache-2.0"
 rand = { version = "0.8", features = ["small_rng"] }
 serde = { version = "1.0", features = ["derive"] }
 
-display-as = { version = "0.5.2", optional = true }
+display-as = { path = "../display-as/display-as", version = "0.6.0", optional = true }
 
 [dev-dependencies]
 
