--- a/abridge/Cargo.toml
+++ b/abridge/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 
 bridge-deck = { version = "0.1.1", path = "..", features = ["display-as"] }
+bridge-solver = { version = "0.1.0", path = "../bridge-solver" }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
