--- a/abridge/Cargo.toml
+++ b/abridge/Cargo.toml
@@ -16,9 +16,14 @@ serde_json = "1.0"
 rand = "0.8.0"
 memorable-wordlist = "0.1.7"
 
-warp = "0.2.5"
-tokio = { version = "0.2", features = ["full", "time"] }
-futures = "0.3.8"
+warp = "0.3.0"
+tokio = { version = "1.22.0", features = ["full", "time"] }
+async-stream = "0.3.3"
+futures = "0.3.25"
 regex = "1.4.3"
+axum = "0.6.1"
+hyper = "0.14.23"
+http = "0.2.8"
+internment = "0.7.0"
 
-display-as = { path = "../../display-as/display-as", version = "0.6.0", features = ["usewarp"] }
+display-as = { path = "../../display-as/display-as", version = "0.7.0", features = ["warp"] }
