--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ debug = true
 rand = { version = "0.8", features = ["small_rng"] }
 serde = { version = "1.0", features = ["derive"] }
 
-display-as = { path = "../display-as/display-as", version = "0.7.0", optional = true }
+display-as = { version = "0.7.0", optional = true }
 
 [dev-dependencies]
 
