--- a/robot/Cargo.toml
+++ b/robot/Cargo.toml
@@ -18,6 +18,7 @@ regex = "1.4.3"
 display-as = { version = "0.7.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+getrandom = { version = "0.2.10", features = ["js"]}
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
