--- a/abridge/Cargo.toml
+++ b/abridge/Cargo.toml
@@ -3,6 +3,7 @@ name = "abridge"
 version = "0.1.0"
 authors = ["David Roundy <daveroundy@gmail.com>"]
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
