--- a/abridge/Cargo.toml
+++ b/abridge/Cargo.toml
@@ -15,7 +15,8 @@ robot = { version = "0.1.0", path = "../robot" }
 serde_json = "1.0"
 rand = "0.8.0"
 memorable-wordlist = "0.1.7"
-
+lets-encrypt-warp = "0.3.0"
+clap = { version = "4.4.3", features = ["derive"] }
 warp = "0.3.0"
 tokio = { version = "1.32.0", features = ["full", "time"] }
 futures = "0.3.28"
