start supporting multiple tables

--- a/abridge/Cargo.toml
+++ b/abridge/Cargo.toml
@@ -24,6 +24,7 @@ axum = "0.6.1"
 hyper = "0.14.23"
 http = "0.2.8"
 internment = "0.7.0"
+dashmap = "5.5.3"
 
 display-as = { version = "0.7.0", features = ["warp"] }
 
