--- a/abridge/Cargo.toml
+++ b/abridge/Cargo.toml
@@ -13,6 +13,7 @@ bridge-deck = { version = "0.1.1", path = "..", features = ["display-as"] }
 robot = { version = "0.1.0", path = "../robot" }
 
 serde_json = "1.0"
+percent-encoding = "2.3.0"
 rand = "0.8.0"
 memorable-wordlist = "0.1.7"
 lets-encrypt-warp = "0.3.0"
